--- a/index.html
+++ b/index.html
@@ -1,31 +1,59 @@
+<!-- 
+Welcome in my personal website 100% HTML
+Handcrafted With ❤ By: Alexandros Papaspyrou [CC-BY]
+Last Update: 11/7/2017 
+Contact: alexispapy@gmail.com
+-->
 <!DOCTYPE html>
 <html>
-<title>A-Papaspyrou</title>
+<title>Papaspyrou Alexandros</title>
+<link rel="icon" href="https://68.media.tumblr.com/244dfa6be45405237a64e5a056d7bd59/tumblr_ooi2q2AWTT1si59zfo2_1280.png" type="image/png">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://www.w3schools.com/lib/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link href='https://fonts.googleapis.com/css?family=Aldrich' rel='stylesheet'>
 <style>
-body,h1 {font-family: "Raleway", sans-serif}
-body, html {height: 100%}
-.bgimg {
-    background-image: url('https://s-media-cache-ak0.pinimg.com/originals/81/f0/85/81f085b50784401a7851a9c5d7fcc243.jpg');
-    min-height: 100%;
+body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
+body, html {
+    height: 100%;
+    line-height: 1.8;
+}
+/* Full height image header */
+.bgimg-1 {
     background-position: center;
     background-size: cover;
+    background-image: url("https://c1.staticflickr.com/4/3676/32780334312_14c9b2df93_o.jpg");
+    min-height: 100%;
+}
+.w3-bar .w3-button {
+    padding: 16px;
 }
 </style>
-<body>
+<body class="w3-light-grey w3-content" style="max-width:1600px">
 
-<div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
-  <div class="w3-display-topleft w3-padding-large w3-xlarge">
-    COMING SOON
-  </div>
- 
-  <div class="w3-display-bottomleft w3-padding-large">
-    By Alexandros Papaspyrou
-  </div>
-</div>
+<header class="bgimg-1 w3-display-container w3-grayscale-min" id="home"><div class="w3-display-middle w3-padding-xxlarge w3-text-white"><center><br><br><img src="https://68.media.tumblr.com/244dfa6be45405237a64e5a056d7bd59/tumblr_ooi2q2AWTT1si59zfo2_1280.png" alt="Me" style="width:30%" class="w3-circle"><h1 style="font-family:Aldrich; font-size:450%;">WELCOME</h1><p style="font-family:Aldrich; font-size:250%;">in my personal website</p></center></div></header>
+
+
+<!-- Footer --><footer class="w3-container w3-padding-6 w3-black ">
+<!-- top --> &nbsp; <a href="#home" class="w3-button w3-black"><i class="fa fa-arrow-up"></i></a>
+<!-- blog --> &nbsp; <a href="https://robodayblog.wordpress.com/" class="w3-button w3-black"><i class="fa fa-wordpress"></i></a>
+<!-- linkedin --> &nbsp; <a href="https://gr.linkedin.com/in/alexandrospapaspyrou" class="w3-button w3-black"><i class="fa fa-linkedin"></i></a>
+<!-- CC --><br><i style="font-size:15px" class="fa">&#xf25e;</i> Papaspyrou Alexandros 2017
+</footer><!-- End footer -->
+
+<!-- chat -->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/57e80bcdbb785b3a47cafa79/default';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();</script>
 
 </body>
 </html>
