--- a/cv.html
+++ b/cv.html
@@ -35,14 +35,14 @@ body, html {
 <div class="w3-top">
 <div class="w3-bar w3-black w3-card-2" id="myNavbar">
   
-<a href="https://a-papaspyrou.000webhostapp.com" class="w3-bar-item w3-button w3-wide">
+<a href="https://alexandroshub.github.io/index" class="w3-bar-item w3-button w3-wide">
 
 <img src="https://68.media.tumblr.com/de943f2be142cd7d6709a7bfe0f8daab/tumblr_ooie0nMKfR1si59zfo1_1280.png" style="width:30px;" class="w3-circle w3-left w3-hover-opacity"> &nbsp;
 
 <b> Papaspyrou</b> Alexandros</a>
     <!-- Right-sided navbar links -->
-
-<div class="w3-right w3-hide-small"><a href="https://a-papaspyrou.000webhostapp.com/projects.html" class="w3-bar-item w3-button"><i class="fa fa-th"></i> PROJECTS</a>  </div>
+<div class="w3-right w3-hide-small"><a href="https://alexandroshub.github.io/projects" class="w3-bar-item w3-button">
+    <i class="fa fa-th"></i> PROJECTS</a>  </div>
 
 </div><!-- Hide right-floated links on small screens and replace them with a menu icon -->
 <a href="javascript:void(0)" class="w3-bar-item w3-button w3-right w3-hide-large w3-hide-medium" onclick="w3_open()">
@@ -51,9 +51,8 @@ body, html {
 <!-- Sidenav on small screens when clicking the menu icon -->
 <nav class="w3-sidenav w3-black w3-card-2 w3-animate-left w3-hide-medium w3-hide-large" style="display:none" id="mySidenav">
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-large w3-padding-16">Close </a>
-  <a href="https://a-papaspyrou.000webhostapp.com/projects.html" onclick="w3_close()">PROJECTS</a>
-    <a href="https://a-papaspyrou.000webhostapp.com/about.html" onclick="w3_close()">ABOUT</a>
-  <a href="https://a-papaspyrou.000webhostapp.com/cv.html" onclick="w3_close()">CV</a>
+  <a href="https://alexandroshub.github.io/projects" onclick="w3_close()">PROJECTS</a>
+  <a href="https://alexandroshub.github.io/cv" onclick="w3_close()">CV</a>
 
 </nav>
 <br><br><br>
