--- a/projects.html
+++ b/projects.html
@@ -1,11 +1,163 @@
+<!-- @ProjectsPage
+Welcome in my personal website 100% HTML
+Handcrafted With ❤ By: Alexandros Papaspyrou [CC-BY]
+Last Update: 10/6/2017 
+Contact: alexispapy@gmail.com
+-->
 <!DOCTYPE html>
 <html>
-<head>
-<title>Page Title</title>
-</head>
-<body>
+<title>Papaspyrou Alexandros</title>
+<link rel="icon" href="https://68.media.tumblr.com/244dfa6be45405237a64e5a056d7bd59/tumblr_ooi2q2AWTT1si59zfo2_1280.png" type="image/png">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/lib/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
 
-<h1>soon</h1>
+body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
+body, html {
+    height: 100%;
+    line-height: 1.8;
+}
+/* Full height image header */
+.bgimg-1 {
+    background-position: center;
+    background-size: cover;
+    background-image: url("https://c1.staticflickr.com/4/3676/32780334312_14c9b2df93_o.jpg");
+    min-height: 100%;
+}
+.w3-bar .w3-button {
+    padding: 16px;
+}
+</style>
+<body class="w3-light-grey w3-content" style="max-width:1600px">
 
+<!-- Navbar (sit on top) -->
+<div class="w3-top">
+  <div class="w3-bar w3-black w3-card-2 w3-opacity-min w3-hover-opacity-off" id="myNavbar">
+  
+<a href="https://a-papaspyrou.000webhostapp.com" class="w3-bar-item w3-button w3-wide">
+
+<img src="https://68.media.tumblr.com/de943f2be142cd7d6709a7bfe0f8daab/tumblr_ooie0nMKfR1si59zfo1_1280.png" style="width:30px;" class="w3-circle w3-left w3-hover-opacity"> &nbsp;
+
+<b> Papaspyrou</b> Alexandros</a>
+    <!-- Right-sided navbar links -->
+          <div class="w3-right w3-hide-small"><a href="https://robodayblog.wordpress.com/" class="w3-bar-item w3-button"><i class="fa fa-commenting-o"></i> Thoughts</a></div>
+<div class="w3-right w3-hide-small"> <a href="https://a-papaspyrou.000webhostapp.com/about.html" class="w3-bar-item w3-button"><i class="fa fa-map-o"></i> Map</a>  </div>
+<div class="w3-right w3-hide-small"><a href="https://a-papaspyrou.000webhostapp.com/cv.html" class="w3-bar-item w3-button"><i class="fa fa-user-o"></i> Me</a></div>
+<div class="w3-right w3-hide-small"><a href="https://a-papaspyrou.000webhostapp.com/projects.html" class="w3-bar-item w3-button"><i class="fa fa-send-o"></i> Creations</a>  </div>
+
+</div><!-- Hide right-floated links on small screens and replace them with a menu icon -->
+<a href="javascript:void(0)" class="w3-bar-item w3-button w3-right w3-hide-large w3-hide-medium" onclick="w3_open()">
+<i class="fa fa-bars w3-padding-right w3-padding-left"></i></a></div>
+
+<!-- Sidenav on small screens when clicking the menu icon -->
+<nav class="w3-sidenav w3-black w3-card-2 w3-animate-left w3-hide-medium w3-hide-large" style="display:none" id="mySidenav">
+  <a href="javascript:void(0)" onclick="w3_close()" class="w3-large w3-padding-16">Close </a>
+  <a href="https://a-papaspyrou.000webhostapp.com/projects.html" onclick="w3_close()">Creations</a>
+  <a href="https://a-papaspyrou.000webhostapp.com/cv.html" onclick="w3_close()">Me</a>
+
+</nav>
+<br><br> <b><p style="font-family: Aldrich; font-size:300%; text-align:center;">My Creations</p></b>
+<p style="font-family:Aldrich; font-size:150%; text-align:center;">take a look.</p>
+<br> 
+<!-- About Section -->
+<div class="w3-container" style="padding:20px 16px" id="about">
+<link href='https://fonts.googleapis.com/css?family=Aldrich' rel='stylesheet'>
+
+  <div class="w3-row-padding w3-center" style="margin-top:64px">
+    <div class="w3-quarter">
+      <i class="fa fa-code w3-margin-bottom w3-jumbo w3-center"></i>
+      <p class="w3-large"><b>Code</b></p>
+      <p>kremaλaki (VB)</p>
+    </div>
+    <div class="w3-quarter">
+      <i class="fa fa-gears w3-margin-bottom w3-jumbo"></i>
+      <p class="w3-large"><b>Make</b></p>
+            <p>LDR swich 
+			<br>Michatron</p>
+    </div>
+    <div class="w3-quarter">
+      <i class="fa fa-paper-plane-o w3-margin-bottom w3-jumbo"></i>
+      <p class="w3-large"><b>ideas & designs</b></p>
+           <p>Blog</p>
+    </div>
+    <div class="w3-quarter">
+      <i class="fa fa-folder-open-o w3-margin-bottom w3-jumbo"></i>
+      <p class="w3-large"><b>Files Repository</b></p>
+           <p>DropBox</p>
+    </div>
+  </div>
+</div>
+
+
+<!-- End page content -->
+<!-- Footer -->
+
+<!-- SM --><div class="w3-black w3-center w3-padding-12">
+<a href=" https://twitter.com/A_Papaspyrou "><i class="fa fa-twitter" style="font-size:14px;color:white"></i></a>
+<a href=" https://gr.linkedin.com/in/alexandrospapaspyrou "> <i class="fa fa-linkedin" style="font-size:14px;color:white"></i></a>
+<a href=" http://stackoverflow.com/users/7315499/alexispapy "><i class="fa fa-stack-overflow" style="font-size:14px;color:white"></i></a>
+<a href=" https://github.com/alexandroshub "><i class="fa fa-github-alt" style="font-size:14px;color:white"></i></a>
+<a href=" https://www.reddit.com/user/alexispapy "><i class="fa fa-reddit-alien" style="font-size:14px;color:white"></i></a>
+<a href="https://www.youtube.com/channel/UCticUCJNkJpUvLq6F-1Zujw "><i class="fa fa-youtube-play" style="font-size:14px;color:white"></i></a> 
+<a href=" https://www.flickr.com/photos/alexispapy/albums"><i class="fa fa-flickr" style="font-size:14px;color:white"></i></a>
+<a href="https://www.facebook.com/papaspyrou.alexandros"><i class="fa fa-facebook" style="font-size:14px;color:white"></i></a> 
+<a href=" http://www.slideshare.net/alexandrospapaspurou "><i class="fa fa-slideshare" style="font-size:14px;color:white"></i></a>
+<a href="https://www.instagram.com/alexandrospapaspyrou"><i class="fa fa-instagram" style="font-size:14px;color:white"></i></a>
+<a href=" https://plus.google.com/+AlexandrosPapaspyrou "><i class="fa fa-google-plus" style="font-size:14px;color:white"></i></a>
+<a href=" http://www.instructables.com/member/alexispapy/"><i class="fa fa-rocket" style="font-size:14px;color:white"></i></a>
+<a href=" https://bitbucket.org/alexispapy "><i class="fa fa-bitbucket" style="font-size:14px;color:white"></i></a>
+<a href=" https://vimeo.com/alexispapy "><i class="fa fa-vimeo" style="font-size:14px;color:white"></i></a>
+<a href=" https://gr.pinterest.com/alexispapy "><i class="fa fa-pinterest-p" style="font-size:14px;color:white"></i></a>
+<a href=" https://alexispapy.tumblr.com/ "><i class="fa fa-tumblr"></i></a>
+<a href=" 6949452023 "><i class="fa fa-whatsapp"></i></a>
+<a href=" a-papaspyrou@outlook.com.gr  "><i class="fa fa-skype"></i></a>
+<br><!-- CC --><i style="font-size:15px" class="fa">&#xf25e;</i>Papaspyrou Alexandros 2017</div>
+<!-- End footer -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<script>
+// Script to open and close sidebar
+function w3_open() {
+    document.getElementById("mySidebar").style.display = "block";
+    document.getElementById("myOverlay").style.display = "block";
+}
+ 
+function w3_close() {
+    document.getElementById("mySidebar").style.display = "none";
+    document.getElementById("myOverlay").style.display = "none"
+}
+</script>
+<!-- chat -->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/57e80bcdbb785b3a47cafa79/default';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();</script>
 </body>
 </html>
