--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!-- 
 Welcome in my personal website 100% HTML Hosted by Github
 Handcrafted With ❤ By: Alexandros Papaspyrou
-Last Update: 22/7/2017 Contact: alexispapy@gmail.com
+Last Update: 26/7/2017
 -->
-
 <!DOCTYPE html>
 <html>
 <title>Papaspyrou Alexandros</title>
@@ -96,13 +95,14 @@ body, html {
 <a href=" https://vimeo.com/alexispapy "><i class="fa fa-vimeo" style="font-size:14px;color:white"></i></a>
 <a href=" https://gr.pinterest.com/alexispapy "><i class="fa fa-pinterest-p" style="font-size:14px;color:white"></i></a>
 <a href=" https://alexispapy.tumblr.com/ "><i class="fa fa-tumblr" style="font-size:14px;color:white"></i></a>
+<a href=" https://www.snapchat.com/add/apapaspyrou "><i class="fa fa-snapchat-ghost" style="font-size:14px;color:white"></i></a>
 <!-- CC -->
 <p style="font-family:Aldrich; font-size:100%;">
 <i style="font-size:15px" class="fa" style="font-size:14px;color:white">&#xf25e;</i> 
 Papaspyrou Alexandros 2017</p>
 </div>
+ <div class="w3-display-right w3-padding-large w3-text-white">soon...</div>
 </header>
-
 <!-- chat -->
 <script type="text/javascript">
 var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
@@ -116,3 +116,4 @@ s0.parentNode.insertBefore(s1,s0);
 })();</script>
 <!-- That's all folks! -->  
 </body></html>
+<!-- Contact: a-papaspyrou@outlook.com.gr  |  Mob: 00306949452023 -->
