--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!-- 
 Welcome in my personal website 100% HTML Hosted by Github
 Handcrafted With ❤ By: Alexandros Papaspyrou
-Last Update: 26/7/2017
+Last Update: 30/7/2017
 -->
 <!DOCTYPE html>
 <html>
@@ -81,27 +81,20 @@ body, html {
  <div class="w3-display-bottomleft w3-padding-large w3-text-white">
 <a href=" https://twitter.com/A_Papaspyrou "><i class="fa fa-twitter" style="font-size:14px;color:white"></i></a>
 <a href=" https://gr.linkedin.com/in/alexandrospapaspyrou "> <i class="fa fa-linkedin" style="font-size:14px;color:white"></i></a>
-<a href=" http://stackoverflow.com/users/7315499/alexispapy "><i class="fa fa-stack-overflow" style="font-size:14px;color:white"></i></a>
-<a href=" https://github.com/alexandroshub "><i class="fa fa-github-alt" style="font-size:14px;color:white"></i></a>
 <a href=" https://www.reddit.com/user/alexispapy "><i class="fa fa-reddit-alien" style="font-size:14px;color:white"></i></a>
 <a href="https://www.youtube.com/channel/UCticUCJNkJpUvLq6F-1Zujw "><i class="fa fa-youtube-play" style="font-size:14px;color:white"></i></a> 
 <a href=" https://www.flickr.com/photos/alexispapy/albums"><i class="fa fa-flickr" style="font-size:14px;color:white"></i></a>
 <a href="https://www.facebook.com/papaspyrou.alexandros"><i class="fa fa-facebook" style="font-size:14px;color:white"></i></a> 
-<a href=" http://www.slideshare.net/alexandrospapaspurou "><i class="fa fa-slideshare" style="font-size:14px;color:white"></i></a>
 <a href="https://www.instagram.com/alexandrospapaspyrou"><i class="fa fa-instagram" style="font-size:14px;color:white"></i></a>
 <a href=" https://plus.google.com/+AlexandrosPapaspyrou "><i class="fa fa-google-plus" style="font-size:14px;color:white"></i></a>
-<a href=" http://www.instructables.com/member/alexispapy/"><i class="fa fa-rocket" style="font-size:14px;color:white"></i></a>
-<a href=" https://bitbucket.org/alexispapy "><i class="fa fa-bitbucket" style="font-size:14px;color:white"></i></a>
-<a href=" https://vimeo.com/alexispapy "><i class="fa fa-vimeo" style="font-size:14px;color:white"></i></a>
-<a href=" https://gr.pinterest.com/alexispapy "><i class="fa fa-pinterest-p" style="font-size:14px;color:white"></i></a>
-<a href=" https://alexispapy.tumblr.com/ "><i class="fa fa-tumblr" style="font-size:14px;color:white"></i></a>
-<a href=" https://www.snapchat.com/add/apapaspyrou "><i class="fa fa-snapchat-ghost" style="font-size:14px;color:white"></i></a>
 <!-- CC -->
 <p style="font-family:Aldrich; font-size:100%;">
 <i style="font-size:15px" class="fa" style="font-size:14px;color:white">&#xf25e;</i> 
 Papaspyrou Alexandros 2017</p>
 </div>
- <div class="w3-display-right w3-padding-large w3-text-white">soon...</div>
+<div class="w3-display-right w3-padding-large w3-text-white"><a href="https://m.me/papaspyrou.alexandros">
+<i class="fa fa-comments-o" style="font-size:24px;"></i></a></div>
+<!-- end of photo -->
 </header>
 <!-- chat -->
 <script type="text/javascript">
