--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
-<!-- 
-Welcome in my personal website 100% HTML Hosted by Github
+
+<!-- Welcome in my personal website 100% HTML Hosted by Github
 Handcrafted With ❤ By: Alexandros Papaspyrou
-Last Update: 30/7/2017
--->
+Last Update: 1/8/2017 -->
 <!DOCTYPE html>
 <html>
 <title>Papaspyrou Alexandros</title>
@@ -32,74 +31,77 @@ body, html {
 }
 </style>
 <body>
-
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
-  <div class="w3-bar w3-black w3-card-2 w3-opacity-min w3-hover-opacity-off" id="myNavbar">
-    
+	<div class="w3-bar w3-black w3-card-2 w3-opacity-min w3-hover-opacity-off" id="myNavbar">
 <a href="http://a-papaspyrou.tk" class="w3-bar-item w3-button w3-wide">
 <img src="https://68.media.tumblr.com/de943f2be142cd7d6709a7bfe0f8daab/tumblr_ooie0nMKfR1si59zfo1_1280.png" style="width:30px;" class="w3-circle w3-left w3-hover-opacity"> &nbsp; 
 <b> Papaspyrou</b> Alexandros</a>
+
 <!-- Right-sided navbar links -->
-    <div class="w3-right w3-hide-small">
-<a href="https://alexandroshub.github.io/projects.html" class="w3-bar-item w3-button"><i class="fa fa-send-o"></i> Creations</a><a href="https://alexandroshub.github.io/me.html" class="w3-bar-item w3-button"><i class="fa fa-user-o"></i> Me </a> <a href="https://alexandroshub.github.io/map.html" class="w3-bar-item w3-button"><i class="fa fa-map-o"></i> Map</a><a href="https://robodayblog.wordpress.com/" class="w3-bar-item w3-button"><i class="fa fa-commenting-o"></i> Thoughts</a><a href="https://m.me/papaspyrou.alexandros"  class="w3-bar-item w3-button w3-hover-blue"><i class="fa fa-comments-o"></i></a>
-    </div>
-    <!-- Hide right-floated links on small screens and replace them with a menu icon -->
-
-    <a href="javascript:void(0)" class="w3-bar-item w3-button w3-right w3-hide-large w3-hide-medium" onclick="w3_open()">
-      <i class="fa fa-bars"></i>
-    </a>
-  </div>
+<div class="w3-right w3-hide-small">
+	<a href="https://alexandroshub.github.io/projects.html" class="w3-bar-item w3-button"><i class="fa fa-send-o"></i> Creations</a>
+	<a href="https://alexandroshub.github.io/me.html" class="w3-bar-item w3-button"><i class="fa fa-user-o"></i> Me </a> 
+	<a href="https://alexandroshub.github.io/map.html" class="w3-bar-item w3-button"><i class="fa fa-map-o"></i> Map</a>
+	<a href="https://robodayblog.wordpress.com/" class="w3-bar-item w3-button"><i class="fa fa-commenting-o"></i> Thoughts</a>
+	<a href="https://m.me/papaspyrou.alexandros"  class="w3-bar-item w3-button w3-hover-blue"><i class="fa fa-comments-o"></i></a>
 </div>
-
+<!-- Hide right-floated links on small screens and replace them with a menu icon -->
+<a href="javascript:void(0)" class="w3-bar-item w3-button w3-right w3-hide-large w3-hide-medium" onclick="w3_open()"><i class="fa fa-bars"></i></a></div></div>
 <!-- Sidebar on small screens when clicking the menu icon -->
 <nav class="w3-sidebar w3-bar-block w3-black w3-card-2 w3-animate-left w3-hide-large w3-hide-medium" style="display:none" id="mySidebar">
-  <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16">Close ×</a>
-  <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">ABOUT</a>
-  <a href="#team" onclick="w3_close()" class="w3-bar-item w3-button">TEAM</a>
-  <a href="#work" onclick="w3_close()" class="w3-bar-item w3-button">WORK</a>
-  <a href="#pricing" onclick="w3_close()" class="w3-bar-item w3-button">PRICING</a>
-  <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button">CONTACT</a>
+<a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16 w3-hover-red" >Close ×</a> 
+	<a href="https://alexandroshub.github.io/projects.html" onclick="w3_close()" class="w3-bar-item w3-button"><i class="fa fa-send-o"></i> Creations</a>
+	<a href="https://alexandroshub.github.io/me.html" onclick="w3_close()"  class="w3-bar-item w3-button"><i class="fa fa-user-o"></i> Me </a> 
+	<a href="https://alexandroshub.github.io/map.html" onclick="w3_close()" class="w3-bar-item w3-button"><i class="fa fa-map-o"></i> Map</a>
+	<a href="https://robodayblog.wordpress.com/" onclick="w3_close()" class="w3-bar-item w3-button"><i class="fa fa-commenting-o"></i> Thoughts</a> 
+	<a href="https://m.me/papaspyrou.alexandros" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-blue"><i class="fa fa-comments-o"></i> Messenger</a>
+<hr>
+	&nbsp; <a href="https://www.facebook.com/papaspyrou.alexandros">
+    <i class="fa fa-facebook-official w3-hover-opacity" style="font-size:14px;color:white"></i></a>
+    	&nbsp; <a href="https://www.instagram.com/alexandrospapaspyrou">
+    <i class="fa fa-instagram w3-hover-opacity" style="font-size:14px;color:white"></i></a>
+     	&nbsp; <a href=" https://twitter.com/A_Papaspyrou ">
+    <i class="fa fa-twitter w3-hover-opacity" style="font-size:14px;color:white"></i></a>
+    	&nbsp; <a href="https://gr.linkedin.com/in/alexandrospapaspyrou">
+    <i class="fa fa-linkedin w3-hover-opacity" style="font-size:14px;color:white"></i></a>
+  	&nbsp; <a href=" https://www.reddit.com/user/alexispapy">
+    <i class="fa fa-reddit-alien w3-hover-opacity" style="font-size:14px;color:white"></i></a>
 </nav>
 
 <!-- Header with full-height image -->
 <header class="bgimg-1 w3-display-container w3-grayscale-min" id="home">
-<div class="w3-display-middle w3-text-white" style="padding:48px">
-<div class="w3-display-middle" style="white-space:nowrap;">
-<span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">WELCOME <span class="w3-hide-small w3-hide-medium">in my personal website</span> </span>
-</div>
-</div>
-<!-- C MEDIA -->
+	<div class="w3-display-middle w3-text-white" style="padding:48px">
+	<div class="w3-display-middle" style="white-space:nowrap;">
+	<span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">WELCOME 
+	<span class="w3-hide-small w3-hide-medium">in my personal website</span></span></div></div>
+
+<!-- C MEDIA --><span class="w3-hide-small">
 <div class="w3-display-bottomleft w3-text-white w3-large" style="padding:24px 48px">
     <a href="https://www.facebook.com/papaspyrou.alexandros">
-    <i class="fa fa-facebook-official w3-hover-opacity"></i></a>
+    <i class="fa fa-facebook-official w3-hover-opacity" style="font-size:14px;color:white"></i></a>
     <a href="https://www.instagram.com/alexandrospapaspyrou">
-    <i class="fa fa-instagram w3-hover-opacity"></i></a>
+    <i class="fa fa-instagram w3-hover-opacity" style="font-size:14px;color:white"></i></a>
     <a href=" https://twitter.com/A_Papaspyrou ">
-    <i class="fa fa-twitter w3-hover-opacity"></i></a>
+    <i class="fa fa-twitter w3-hover-opacity" style="font-size:14px;color:white"></i></a>
     <a href="https://gr.linkedin.com/in/alexandrospapaspyrou">
-    <i class="fa fa-linkedin w3-hover-opacity"></i></a>
+    <i class="fa fa-linkedin w3-hover-opacity" style="font-size:14px;color:white"></i></a>
     <a href=" https://www.reddit.com/user/alexispapy">
-    <i class="fa fa-reddit-alien w3-hover-opacity"></i></a>
-<!-- CC -->
-<br><h style="font-family:Aldrich; font-size:100%;">
-<i class="fa fa-creative-commons"></i>
-Papaspyrou Alexandros 2017</h>
-    
-	</div>
-  <!-- end of header -->
-</header> 
+    <i class="fa fa-reddit-alien w3-hover-opacity" style="font-size:14px;color:white"></i></a>
+	<!-- CC -->
+    <br><h style="font-family:Aldrich; font-size:15px;">
+    <i class="fa fa-creative-commons" style="font-size:14px;color:white"></i>
+    Papaspyrou Alexandros<span class="w3-hide-small w3-hide-medium"> 2017</span></h>
+</div></span>
+
+<!-- end of header --></header>
 <script>// Toggle between showing and hiding the sidebar when clicking the menu icon
 var mySidebar = document.getElementById("mySidebar");
-function w3_open() {
-    if (mySidebar.style.display === 'block') 
-    {mySidebar.style.display = 'none';} 
-    else {mySidebar.style.display = 'block';}
+function w3_open() { if (mySidebar.style.display === 'block') 
+{mySidebar.style.display = 'none';} else {mySidebar.style.display = 'block';}
 }// Close the sidebar with the close button
-function w3_close() {mySidebar.style.display = "none";}
-</script>
+function w3_close() {mySidebar.style.display = "none";} </script>
 <!-- chat --><script type="text/javascript"> var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date(); (function(){ var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
 s1.async=true; s1.src='https://embed.tawk.to/57e80bcdbb785b3a47cafa79/default'; s1.charset='UTF-8'; s1.setAttribute('crossorigin','*'); s0.parentNode.insertBefore(s1,s0); }) ();</script><!-- end of chat -->
-<!-- That's all folks! -->  
-</body></html>
+<!-- That's all folks! --></body></html>
 <!-- Contact: a-papaspyrou@outlook.com.gr  |  Mob: 00306949452023 -->
