--- a/map.html
+++ b/map.html
@@ -1,10 +1,12 @@
+
 <!DOCTYPE html>
 <html>
-<title>map</title>
+<title>A</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 body,h1,h5 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
@@ -21,14 +23,17 @@ body, html {height: 100%}
   <div class="w3-display-middle w3-jumbo">
     <p><center><img src="https://68.media.tumblr.com/244dfa6be45405237a64e5a056d7bd59/tumblr_ooi2q2AWTT1si59zfo2_1280.png" alt="Me" style="width:40%" class="w3-circle"></center></p>
   </div>
-  
-  <div class="w3-display-topleft w3-container w3-xlarge">
+<div class="w3-display-topleft w3-container w3-xlarge">
+
+ <p><a href="http://a-papaspyrou.tk" class="w3-bar-item w3-black w3-button w3-wide"><i class="fa fa-home"></i>
+</a></p>
+
     <p><button onclick="document.getElementById('menu').style.display='block'" class="w3-button w3-black">Map</button></p>
     <p><button onclick="document.getElementById('contact').style.display='block'" class="w3-button w3-black">About</button></p>
   </div>
   <div class="w3-display-bottomleft w3-container">
     <p class="w3-xlarge">Welcome in my website.</p>
-    <p>Papaspyrou Alexandros</p>
+    <p>(CC) Papaspyrou Alexandros 2011 - 2017</p>
   </div>
 </div>
 
@@ -37,16 +42,38 @@ body, html {height: 100%}
   <div class="w3-modal-content w3-animate-zoom">
     <div class="w3-container w3-black w3-display-container">
       <span onclick="document.getElementById('menu').style.display='none'" class="w3-button w3-display-topright w3-large">x</span>
-      <h1>soon</h1>
+      <h1>Posts</h1>
     </div>
     <div class="w3-container">
-      <h5>soon</h5>
+      <h5>Automation</h5>
+      <h5>Robots</h5>
+      <h5>IoT</h5>
+
     </div>
     <div class="w3-container w3-black">
-      <h1>soon</h1>
+      <h1>Events</h1>
     </div>
     <div class="w3-container">
-      <h5>soon</h5>
+          <h2>irganize</h2>
+      <h5>FKF @ puas.gr</h5>
+      <h5>FKF @ puas.gr</h5>
+      <h5>OpenFest @ puas.gr</h5>
+            <h2>participate</h2>
+      <h5>CV</h5>
+
+    </div>
+     <div class="w3-container w3-black">
+      <h1>Trips</h1>
+    </div>
+    <div class="w3-container">
+      <h2>🇪🇺</h2>
+      <h5>CERN sw</h5>
+      <h5>Birmingham uk</h5>
+      <h2>gr</h2>
+      <h5>Thessaloniki</h5>
+      <h5>Patra</h5>
+      <h5>Creta</h5>
+
     </div>
   </div>
 </div>
@@ -56,13 +83,15 @@ body, html {height: 100%}
   <div class="w3-modal-content w3-animate-zoom">
     <div class="w3-container w3-black">
       <span onclick="document.getElementById('contact').style.display='none'" class="w3-button w3-display-topright w3-large">x</span>
-      <h1>soon</h1>
+      <h1>About a-papaspyrou.kt</h1>
     </div>
     <div class="w3-container">
-      <p>soon:</p>
+      <p>Ο διαδικτυακός αυτός χώρος εξελίσσεται και συντηρείται αποκλειστικά από τον Alexandro Papaspyrou. Γίνεται κάθε προσπάθεια ώστε να παρέχονται χωρίς διακοπή όλες οι σελίδες, οι υπηρεσίες, οι επιλογές και τα περιεχόμενα αλλά δεν μπορούμε να εγγυηθούμε ότι δεν θα υπάρξουν αστοχίες και σφάλματα. Λαμβάνουμε όλα τα απαραίτητα μέτρα ώστε να μην υπάρξουν ιοί η άλλο κακόβουλο λογισμικό στην ιστοσελίδα ή στους εξυπηρετητές (servers) που την φιλοξενούν, αλλά δεν μπορούμε να εγγυηθούμε τα αποτελέσματα. Οι δημιουργοί της παρούσας ιστοσελίδας διατηρούν το δικαίωμα να διακόψουν προσωρινά ή μόνιμα τη λειτουργία της, για οποιονδήποτε λόγο. Σε αυτή την περίπτωση δεν φέρουν καμία ευθύνη για τυχόν απώλεια δεδομένων, κειμένων, φωτογραφιών κλπ. που έχουν αναρτηθεί από κάποιον χρήστη. Το site, μεταξύ άλλων, μπορεί να υποστηρίζει συχνές ερωτήσεις, δυνατότητα επικοινωνίας, διαφημίσεις, banners, δημοσκοπήσεις και μηνύματα σε σημεία που επιλέγουν οι διαχειριστές του. </p>
+<hr>
+	<p>
+</p>
     </div>
   </div>
 </div>
-
-</body>
-</html>
+    
+</body></html>
