--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
-
 <!-- Welcome in my personal website 100% HTML Hosted by Github
 Handcrafted With ❤ By: Alexandros Papaspyrou
-Last Update: 1/8/2017 -->
+Last Update: 3/8/2017 -->
 <!DOCTYPE html>
 <html>
 <title>Papaspyrou Alexandros</title>
@@ -9,10 +8,10 @@ Last Update: 1/8/2017 -->
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<!-- Aldrich Style -->
-<link href='https://fonts.googleapis.com/css?family=Aldrich' rel='stylesheet'>
+<!-- Raleway text Style --><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<!-- Aldrich text Style --><link href='https://fonts.googleapis.com/css?family=Aldrich' rel='stylesheet'>
 <style>
 body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 body, html {
@@ -76,20 +75,16 @@ body, html {
 	<span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">WELCOME 
 	<span class="w3-hide-small w3-hide-medium">in my personal website</span></span></div></div>
 
-<!-- C MEDIA --><span class="w3-hide-small">
+<!-- SC MEDIA --><span class="w3-hide-small">
 <div class="w3-display-bottomleft w3-text-white w3-large" style="padding:24px 48px">
     <a href="https://www.facebook.com/papaspyrou.alexandros">
     <i class="fa fa-facebook-official w3-hover-opacity" style="font-size:14px;color:white"></i></a>
-    <a href="https://www.instagram.com/alexandrospapaspyrou">
-    <i class="fa fa-instagram w3-hover-opacity" style="font-size:14px;color:white"></i></a>
-    <a href=" https://twitter.com/A_Papaspyrou ">
-    <i class="fa fa-twitter w3-hover-opacity" style="font-size:14px;color:white"></i></a>
     <a href="https://gr.linkedin.com/in/alexandrospapaspyrou">
     <i class="fa fa-linkedin w3-hover-opacity" style="font-size:14px;color:white"></i></a>
     <a href=" https://www.reddit.com/user/alexispapy">
     <i class="fa fa-reddit-alien w3-hover-opacity" style="font-size:14px;color:white"></i></a>
 	<!-- CC -->
-    <br><h style="font-family:Aldrich; font-size:15px;">
+     | <h style="font-family:Aldrich; font-size:15px;">
     <i class="fa fa-creative-commons" style="font-size:14px;color:white"></i>
     Papaspyrou Alexandros<span class="w3-hide-small w3-hide-medium"> 2017</span></h>
 </div></span>
