--- a/map.html
+++ b/map.html
@@ -1,12 +1,18 @@
-
+<!-- Welcome in my personal website 100% HTML Hosted by Github
+Handcrafted With ❤ By: Alexandros Papaspyrou
+Last Update: 18/8/2017 -->
 <!DOCTYPE html>
 <html>
-<title>A</title>
+<title>Papaspyrou Alexandros</title>
+<link rel="icon" href="https://68.media.tumblr.com/244dfa6be45405237a64e5a056d7bd59/tumblr_ooi2q2AWTT1si59zfo2_1280.png" type="image/png">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<!-- Raleway text Style --><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<!-- Aldrich text Style --><link href='https://fonts.googleapis.com/css?family=Aldrich' rel='stylesheet'>
+
 <style>
 body,h1,h5 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
@@ -31,10 +37,24 @@ body, html {height: 100%}
     <p><button onclick="document.getElementById('menu').style.display='block'" class="w3-button w3-black">Map</button></p>
     <p><button onclick="document.getElementById('contact').style.display='block'" class="w3-button w3-black">About</button></p>
   </div>
-  <div class="w3-display-bottomleft w3-container">
-    <p class="w3-xlarge">Welcome in my website.</p>
-    <p>(CC) Papaspyrou Alexandros 2011 - 2017</p>
-  </div>
+ 
+<!-- SC MEDIA --><span class="w3-hide-small">
+<div class="w3-display-bottomleft w3-text-white w3-large" style="padding:24px 48px">
+
+<a href="https://getpocket.com/@27bdfp78TaK97g4e6dA987eA2dgaT938154I38G999WdrUw2a6c6ei72S21olQ68">
+    <i class="fa fa-get-pocket w3-hover-opacity" style="font-size:14px;color:white"></i></a> | 
+    <a href="https://www.facebook.com/papaspyrou.alexandros">
+    <i class="fa fa-facebook-official w3-hover-opacity" style="font-size:14px;color:white"></i></a>
+    <a href="https://gr.linkedin.com/in/alexandrospapaspyrou">
+    <i class="fa fa-linkedin w3-hover-opacity" style="font-size:14px;color:white"></i></a>
+    <a href=" https://www.reddit.com/user/alexispapy">
+    <i class="fa fa-reddit-alien w3-hover-opacity" style="font-size:14px;color:white"></i></a>
+	<!-- CC -->
+     | <h style="font-family:Aldrich; font-size:15px;">
+    <i class="fa fa-creative-commons" style="font-size:14px;color:white"></i>
+    Papaspyrou Alexandros<span class="w3-hide-small w3-hide-medium"> 2017</span></h>
+</div></span>
+
 </div>
 
 <!-- 1 -->
@@ -93,5 +113,5 @@ body, html {height: 100%}
     </div>
   </div>
 </div>
-    
-</body></html>
+<!-- That's all folks! --></body></html>
+<!-- Contact: a-papaspyrou@outlook.com.gr  |  Mob: 00306949452023 -->
