--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!-- Welcome in my personal website 100% HTML Hosted by Github
 Handcrafted With ❤ By: Alexandros Papaspyrou
-Last Update: 3/8/2017 -->
-<!DOCTYPE html>
+Last Update: 21/8/2017 -->
+<!-- computers and automations -->
+<!-- RTW - Pre-alpha Stage -->
+<!DOCTYPE html> 
 <html>
 <title>Papaspyrou Alexandros</title>
 <link rel="icon" href="https://68.media.tumblr.com/244dfa6be45405237a64e5a056d7bd59/tumblr_ooi2q2AWTT1si59zfo2_1280.png" type="image/png">
@@ -14,10 +16,7 @@ Last Update: 3/8/2017 -->
 <!-- Aldrich text Style --><link href='https://fonts.googleapis.com/css?family=Aldrich' rel='stylesheet'>
 <style>
 body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
-body, html {
-    height: 100%;
-    line-height: 1.8;
-}
+body, html { height: 100%;      line-height: 1.8; }
 /* Full height image header */
 .bgimg-1 {
     background-position: center;
@@ -55,26 +54,24 @@ body, html {
 	<a href="https://alexandroshub.github.io/map.html" onclick="w3_close()" class="w3-bar-item w3-button"><i class="fa fa-map-o"></i> Map</a>
 	<a href="https://robodayblog.wordpress.com/" onclick="w3_close()" class="w3-bar-item w3-button"><i class="fa fa-commenting-o"></i> Thoughts</a> 
 	<a href="https://m.me/papaspyrou.alexandros" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-blue"><i class="fa fa-comments-o"></i> Messenger</a>
-<hr>
-	&nbsp; <a href="https://www.facebook.com/papaspyrou.alexandros">
+<hr><!-- social left -->
+    &nbsp; <a href="https://getpocket.com/@27bdfp78TaK97g4e6dA987eA2dgaT938154I38G999WdrUw2a6c6ei72S21olQ68">
+    <i class="fa fa-get-pocket w3-hover-opacity" style="font-size:14px;color:white"></i></a> &nbsp; | 
+    	&nbsp; <a href="https://www.facebook.com/papaspyrou.alexandros">
     <i class="fa fa-facebook-official w3-hover-opacity" style="font-size:14px;color:white"></i></a>
-    	&nbsp; <a href="https://www.instagram.com/alexandrospapaspyrou">
-    <i class="fa fa-instagram w3-hover-opacity" style="font-size:14px;color:white"></i></a>
-     	&nbsp; <a href=" https://twitter.com/A_Papaspyrou ">
+    	&nbsp; <a href=" https://twitter.com/A_Papaspyrou ">
     <i class="fa fa-twitter w3-hover-opacity" style="font-size:14px;color:white"></i></a>
     	&nbsp; <a href="https://gr.linkedin.com/in/alexandrospapaspyrou">
     <i class="fa fa-linkedin w3-hover-opacity" style="font-size:14px;color:white"></i></a>
   	&nbsp; <a href=" https://www.reddit.com/user/alexispapy">
     <i class="fa fa-reddit-alien w3-hover-opacity" style="font-size:14px;color:white"></i></a>
 </nav>
-
 <!-- Header with full-height image -->
 <header class="bgimg-1 w3-display-container w3-grayscale-min" id="home">
 	<div class="w3-display-middle w3-text-white" style="padding:48px">
 	<div class="w3-display-middle" style="white-space:nowrap;">
 	<span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">WELCOME 
 	<span class="w3-hide-small w3-hide-medium">in my personal website</span></span></div></div>
-
 <!-- SC MEDIA --><span class="w3-hide-small">
 <div class="w3-display-bottomleft w3-text-white w3-large" style="padding:24px 48px">
     <a href="https://www.facebook.com/papaspyrou.alexandros">
@@ -88,7 +85,6 @@ body, html {
     <i class="fa fa-creative-commons" style="font-size:14px;color:white"></i>
     Papaspyrou Alexandros<span class="w3-hide-small w3-hide-medium"> 2017</span></h>
 </div></span>
-
 <!-- end of header --></header>
 <script>// Toggle between showing and hiding the sidebar when clicking the menu icon
 var mySidebar = document.getElementById("mySidebar");
@@ -96,7 +92,7 @@ function w3_open() { if (mySidebar.style.display === 'block')
 {mySidebar.style.display = 'none';} else {mySidebar.style.display = 'block';}
 }// Close the sidebar with the close button
 function w3_close() {mySidebar.style.display = "none";} </script>
-<!-- chat --><script type="text/javascript"> var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date(); (function(){ var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true; s1.src='https://embed.tawk.to/57e80bcdbb785b3a47cafa79/default'; s1.charset='UTF-8'; s1.setAttribute('crossorigin','*'); s0.parentNode.insertBefore(s1,s0); }) ();</script><!-- end of chat -->
+<!-- chat --><script type="text/javascript"> var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date(); (function(){ var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0]; s1.async=true; s1.src='https://embed.tawk.to/57e80bcdbb785b3a47cafa79/default'; s1.charset='UTF-8'; s1.setAttribute('crossorigin','*');  s0.parentNode.insertBefore(s1,s0); }) ();</script><!-- end of chat -->
 <!-- That's all folks! --></body></html>
+<!-- Future ideas: search engine | podcast | more arduino and raspberry projects -->
 <!-- Contact: a-papaspyrou@outlook.com.gr  |  Mob: 00306949452023 -->
