--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!-- Welcome in my personal website 100% HTML Hosted by Github
 Handcrafted With ❤ By: Alexandros Papaspyrou
-Last Update: 21/8/2017 -->
-<!-- computers and automations -->
-<!-- RTW - Pre-alpha Stage -->
+Last Update: 28/8/2017 -->
+<!-- Computers and Automations -->
+<!-- Pre-alpha Stage -->
 <!DOCTYPE html> 
 <html>
 <title>Papaspyrou Alexandros</title>
@@ -10,7 +10,6 @@ Last Update: 21/8/2017 -->
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <!-- Raleway text Style --><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <!-- Aldrich text Style --><link href='https://fonts.googleapis.com/css?family=Aldrich' rel='stylesheet'>
@@ -41,7 +40,7 @@ body, html { height: 100%;      line-height: 1.8; }
 	<a href="https://alexandroshub.github.io/projects.html" class="w3-bar-item w3-button"><i class="fa fa-send-o"></i> Creations</a>
 	<a href="https://alexandroshub.github.io/me.html" class="w3-bar-item w3-button"><i class="fa fa-user-o"></i> Me </a> 
 	<a href="https://alexandroshub.github.io/map.html" class="w3-bar-item w3-button"><i class="fa fa-map-o"></i> Map</a>
-	<a href="https://robodayblog.wordpress.com/" class="w3-bar-item w3-button"><i class="fa fa-commenting-o"></i> Thoughts</a>
+	<a href="https://robodayblog.wordpress.com/" target="_blank" class="w3-bar-item w3-button"><i class="fa fa-commenting-o"></i> Thoughts</a>
 	<a href="https://m.me/papaspyrou.alexandros"  class="w3-bar-item w3-button w3-hover-blue"><i class="fa fa-comments-o"></i></a>
 </div>
 <!-- Hide right-floated links on small screens and replace them with a menu icon -->
@@ -57,7 +56,7 @@ body, html { height: 100%;      line-height: 1.8; }
 <hr><!-- social left -->
     &nbsp; <a href="https://getpocket.com/@27bdfp78TaK97g4e6dA987eA2dgaT938154I38G999WdrUw2a6c6ei72S21olQ68">
     <i class="fa fa-get-pocket w3-hover-opacity" style="font-size:14px;color:white"></i></a> &nbsp; | 
-    	&nbsp; <a href="https://www.facebook.com/papaspyrou.alexandros">
+    	&nbsp; <a href="https://www.facebook.com/papaspyrou.a">
     <i class="fa fa-facebook-official w3-hover-opacity" style="font-size:14px;color:white"></i></a>
     	&nbsp; <a href=" https://twitter.com/A_Papaspyrou ">
     <i class="fa fa-twitter w3-hover-opacity" style="font-size:14px;color:white"></i></a>
@@ -74,7 +73,7 @@ body, html { height: 100%;      line-height: 1.8; }
 	<span class="w3-hide-small w3-hide-medium">in my personal website</span></span></div></div>
 <!-- SC MEDIA --><span class="w3-hide-small">
 <div class="w3-display-bottomleft w3-text-white w3-large" style="padding:24px 48px">
-    <a href="https://www.facebook.com/papaspyrou.alexandros">
+    <a href="https://www.facebook.com/papaspyrou.a">
     <i class="fa fa-facebook-official w3-hover-opacity" style="font-size:14px;color:white"></i></a>
     <a href="https://gr.linkedin.com/in/alexandrospapaspyrou">
     <i class="fa fa-linkedin w3-hover-opacity" style="font-size:14px;color:white"></i></a>
@@ -95,4 +94,5 @@ function w3_close() {mySidebar.style.display = "none";} </script>
 <!-- chat --><script type="text/javascript"> var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date(); (function(){ var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0]; s1.async=true; s1.src='https://embed.tawk.to/57e80bcdbb785b3a47cafa79/default'; s1.charset='UTF-8'; s1.setAttribute('crossorigin','*');  s0.parentNode.insertBefore(s1,s0); }) ();</script><!-- end of chat -->
 <!-- That's all folks! --></body></html>
 <!-- Future ideas: search engine | podcast | more arduino and raspberry projects -->
-<!-- Contact: a-papaspyrou@outlook.com.gr  |  Mob: 00306949452023 -->
+<!-- Contact: a-papaspyrou@outlook.com.gr  |  Mob: 00306949452023  |  Sub: papaspyrou.alexandros@gmail.com -->
+<!-- Πηγές:  https://www.w3schools.com  |  https://www.udacity.com  |   -->
